# ProAtlas

./: Dockerfile  README.md  database.db  database.py  docker-compose.yml  go.mod  go.sum  gqlgen.yml  main.go  main.py  models.py  pyproject.toml  requirements.txt  routes.py  server.go
auth/: auth.py
database/: config.go  init_db.sql  user_db.go
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/components/: ExerciseCreate.vue  ExerciseTable.vue  Navbar.vue  UserCreate.vue  UserLogin.vue  footer.vue
frontend/pages/: index.vue  login.vue
frontend/pages/exercises/: create.vue  overview.vue
graph/: schema.graphqls  schema.resolvers.go
graph/model/: models_gen.go
internal/exercises/: exercises.go
internal/jwt/: jwt.go
internal/pkg/db/migrations/mysql/: 000002_create_exercises_table.up.sql
internal/pkg/db/mysql/: mysql.go
internal/users/: users.go
models/: exercises.go  user.go  workout.go
project_atlas/: .gitignore  models.py
project_atlas/schemas/: exercise_schema.py
router/: helper_router.go  user_router.go
schemas/: exercise_schema.py  user_schemas.py  workout_schemas.py
services/: exercise_service.py  user_service.py  user_services.go  workout_service.py
tests/: test_project_atlas.py
