[tool.poetry]
name = "project-atlas"
version = "0.1.0"
description = ""
authors = ["WiInFelix <schefflerfelix95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.29"
uvicorn = "^0.16.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
